--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 <body>
   <div class="container">
     <header class="header">
-      <img src="images/rikita.jpeg" alt="Rikita Bhatt">
+      <img src="rikita.jpeg" alt="Rikita Bhatt">
       <div class="header-info">
         <h1>Rikita Bhatt</h1>
         <div class="contact-info">
-          <span>Email: rikita@example.com</span>
-          <span>Phone: +91 9999999999</span>
-          <span>Location: Ahmedabad, India</span>
+          <span>Email: rikita26@gmail.com</span>
+          <span>Phone: +91 9714730577</span>
+          <span>Location: Vadodara, India</span>
         </div>
       </div>
     </header>
@@ -160,14 +160,14 @@
       </ul>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
       <h2>Projects</h2>
       <ul>
         <li><b>Course Management System:</b> Built for training centers to manage courses and students.</li>
         <li><b>E-commerce Portal:</b> Full-featured store with payment gateway integration.</li>
         <li><b>Personal Portfolio:</b> Built using React & Tailwind CSS.</li>
       </ul>
-    </section>
+    </section> -->
 
     <section class="section">
       <h2>Languages</h2>
