--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       border-radius: 5px;
     }
 
+    a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
     /* Responsive */
     @media (max-width: 600px) {
       .contact-info {
@@ -114,6 +119,7 @@
         <h1>Rikita Bhatt</h1>
         <div class="contact-info">
           <span>Email: rikita26@gmail.com</span>
+          <span>LinkedIn: <a href="https://www.linkedin.com/in/rikitabhatt26" target="_blank">rikitabhatt26</a></span>
           <span>Phone: +91 9714730577</span>
           <span>Location: Vadodara, India</span>
         </div>
@@ -122,52 +128,88 @@
 
     <section class="section">
       <h2>Profile</h2>
-      <p>Full Stack Web Developer with experience in PHP, Laravel, React, and Next.js. Passionate about building clean and efficient web applications.</p>
+      <p>Full Stack Web Developer with over 10 years of experience in PHP, Laravel, CodeIgniter, React, Next.js, and Magento2. Skilled in managing projects, leading teams, and delivering high-quality web solutions.</p>
     </section>
 
     <section class="section">
-      <h2>Experience</h2>
-      <h3>Lead Web Developer - XYZ Company</h3>
-      <p><em>June 2023 - Present</em></p>
+      <h2>Work Experience</h2>
+
+      <h3>Lead Web Developer - Pavans Group</h3>
+      <p><em>May 2023 - Present</em></p>
       <ul>
-        <li>Lead development of web applications using Laravel & React.</li>
-        <li>Implemented dynamic dashboards and reporting systems.</li>
-        <li>Mentored junior developers and reviewed code.</li>
+        <li>Lead development process, project management, client communications, code review, mobile & iOS web services, and team leadership.</li>
       </ul>
 
-      <h3>Web Developer - ABC Company</h3>
-      <p><em>Jan 2021 - May 2023</em></p>
+      <h3>Senior PHP Developer - Consumer Sketch Pvt Ltd</h3>
+      <p><em>July 2021 - Nov 2022</em></p>
       <ul>
-        <li>Developed e-commerce and admin portals using PHP & MySQL.</li>
-        <li>Integrated APIs and payment gateways.</li>
-        <li>Worked on responsive front-end design with Bootstrap and Tailwind.</li>
+        <li>Managed a 10-person PHP team and handled 3 projects from estimation to execution.</li>
       </ul>
+
+      <h3>PHP Developer - Avdevs LLP</h3>
+      <p><em>June 2020 - June 2021</em></p>
+      <ul>
+        <li>Worked with Laravel and ReactJS for client projects.</li>
+      </ul>
+
+      <h3>PHP Developer - eRoam Technologies Pty Ltd</h3>
+      <p><em>Dec 2019 - June 2020</em></p>
+      <ul>
+        <li>Experience with Lumen framework in Laravel.</li>
+      </ul>
+
+      <h3>PHP Developer - Couldester</h3>
+      <p><em>Dec 2018 - Dec 2019</em></p>
+      <ul>
+        <li>Worked on multiple PHP web projects using CodeIgniter and Laravel.</li>
+      </ul>
+
+      <h3>PHP Developer - Spaculus Software Services</h3>
+      <p><em>Dec 2015 - Dec 2018</em></p>
+      <ul>
+        <li>Worked with CodeIgniter, Laravel, and Magento2 frameworks.</li>
+      </ul>
+
+      <h3>Core PHP Developer - Susthitha Softech</h3>
+      <p><em>Apr 2015 - Aug 2015</em></p>
+      <ul>
+        <li>Handled front-end and back-end of ERP System.</li>
+      </ul>
+
+      <h3>Trainee - Logic Express</h3>
+      <p><em>Oct 2014 - Mar 2015</em></p>
+
+      <h3>Assistant Lecturer - K.J.I.T College, Savli</h3>
+      <p><em>Sep 2012 - Sep 2014</em></p>
     </section>
 
     <section class="section">
       <h2>Education</h2>
-      <h3>Bachelor of Computer Applications (BCA)</h3>
-      <p>XYZ University, 2017 - 2020</p>
+      <ul>
+        <li>M.C.A. from IGNOU (MSU Study Center) - 60% (First Class)</li>
+        <li>PGDCA from IGNOU - 62% (First Class)</li>
+        <li>B.C.A from MSU - 54.41% (Second Class) - 2009</li>
+        <li>Class 12 (Commerce Stream) GSFC School, Vadodara - 70.40% - 2005</li>
+        <li>Class 10 GSFC School, Vadodara - 70.71% - 2003</li>
+      </ul>
     </section>
 
     <section class="section">
       <h2>Skills</h2>
       <ul>
-        <li>PHP, Laravel, CodeIgniter</li>
-        <li>React, Next.js, HTML, CSS, JS</li>
-        <li>MySQL, MongoDB</li>
-        <li>Git, GitHub, REST APIs</li>
+        <li>Programming: PHP, JavaScript, HTML, CSS, TypeScript</li>
+        <li>Frameworks: Laravel, CodeIgniter, Next.js, React.js, Magento2</li>
+        <li>CMS: WordPress</li>
+        <li>Front-end Tools: VS Code, Sublime, Bootstrap, Metro UI, Sass</li>
+        <li>Back-end Tools: XAMPP, LAMP, WAMP, NVM, NPM</li>
+        <li>Database: MySQL</li>
+        <li>Version Control: GitHub, Bitbucket</li>
+        <li>Project Management: Jira, Basecamp, Trello, Notion, Linear</li>
+        <li>Performance Testing: GTmetrix</li>
+        <li>Cloud: AWS (EC2, S3, IAM, deployment)</li>
+        <li>Operating Systems: Windows 98/2000/XP/7, Ubuntu (Basic)</li>
       </ul>
     </section>
-
-    <!-- <section class="section">
-      <h2>Projects</h2>
-      <ul>
-        <li><b>Course Management System:</b> Built for training centers to manage courses and students.</li>
-        <li><b>E-commerce Portal:</b> Full-featured store with payment gateway integration.</li>
-        <li><b>Personal Portfolio:</b> Built using React & Tailwind CSS.</li>
-      </ul>
-    </section> -->
 
     <section class="section">
       <h2>Languages</h2>
