--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="contact-info">
           <span>Email: rikita26@gmail.com</span>
           <span>LinkedIn: <a href="https://www.linkedin.com/in/rikitabhatt26" target="_blank">rikitabhatt26</a></span>
-          <span>Phone: +91 9714730577</span>
+          <!-- <span>Phone: +91 9714730577</span> -->
           <span>Location: Vadodara, India</span>
         </div>
       </div>
