--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <section class="section">
       <h2>Profile</h2>
-      <p>Full Stack Web Developer with over 10 years of experience in PHP, Laravel, CodeIgniter, React, Next.js, and Magento2. Skilled in managing projects, leading teams, and delivering high-quality web solutions.</p>
+      <p>Full Stack Web Developer with experience in PHP, Laravel, React, and Next.js. Passionate about building clean and efficient web applications.</p>
     </section>
 
     <section class="section">
