--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     }
 
     .container {
-      max-width: 800px;
+       max-width: 60%;
+      /* max-width: 800px; */
       margin: 40px auto;
       background: #fff;
       padding: 30px;
@@ -77,7 +78,7 @@
     .contact-info {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px;
+      gap: 5px;
       font-weight: 500;
       margin-top: 5px;
     }
